--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -2100,18 +2100,23 @@
 		th {
 			color: #1b1b1b;
 			font-size: 13px;
-			padding: 4px 0px 3px;
+			padding: 7px 0px 3px;
 			vertical-align: middle;
 			background: #ffe29f;
 			border-style: solid;
 			border-width: 0px 1px 1px 0px;
 			border-color: transparent #fba978 #e8b746 transparent;
 			position: static;
+			pointer-events: none;
+
+			&::before {
+				display: none;
+			}
 	
 			//字靠左
 			&.tLeft {
 				text-align: left;
-				padding: 0px 10px;
+				padding: 3px 0px 0px 10px;
 			}
 		}
   
@@ -2197,11 +2202,13 @@
 				
 				&:nth-of-type(1) {
 					width: 50%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(2),
 				&:nth-of-type(4) {
 					width: 15%;
+					min-width: 0px;
 		
 					.yellowCard {
 						padding-left: 6px;
@@ -2211,6 +2218,7 @@
 				&:nth-of-type(3),
 				&:nth-of-type(5) {
 					width: 10%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2223,6 +2231,7 @@
 
 				&:nth-of-type(1) {
 					width: 44%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(2),
@@ -2235,6 +2244,7 @@
 				&:nth-of-type(9),
 				&:nth-of-type(10) {
 					width: 4%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(11),
@@ -2242,6 +2252,7 @@
 				&:nth-of-type(13),
 				&:nth-of-type(14) {
 					width: 5%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2253,6 +2264,7 @@
 			td {
 				&:nth-of-type(1) {
 					width: 74%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(2),
@@ -2260,11 +2272,13 @@
 				&:nth-of-type(4),
 				&:nth-of-type(5) {
 					width: 4%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(6),
 				&:nth-of-type(7) {
 					width: 5%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2279,16 +2293,19 @@
 				&:nth-of-type(2),
 				&:nth-of-type(6) {
 					width: 5%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(4),
 				&:nth-of-type(5),
 				&:nth-of-type(7) {
 					width: 10%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(3) {
 					width: 55%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2303,6 +2320,7 @@
 
 					&:nth-of-type(1) {
 						width: 32%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2313,6 +2331,7 @@
 					&:nth-of-type(7),
 					&:nth-of-type(8) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(9),
@@ -2324,6 +2343,7 @@
 					&:nth-of-type(15),
 					&:nth-of-type(16) {
 						width: 5%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2337,6 +2357,7 @@
 
 					&:nth-of-type(1) {
 						width: 37%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2347,6 +2368,7 @@
 					&:nth-of-type(7),
 					&:nth-of-type(8) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(9),
@@ -2357,6 +2379,7 @@
 					&:nth-of-type(14),
 					&:nth-of-type(15) {
 						width: 5%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2368,6 +2391,7 @@
 
 					&:nth-of-type(1) {
 						width: 51%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2378,16 +2402,19 @@
 					&:nth-of-type(7),
 					&:nth-of-type(8) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(9),
 					&:nth-of-type(10),
 					&:nth-of-type(11) {
 						width: 5%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(12) {
 						width: 6%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2402,11 +2429,13 @@
 				&:nth-of-type(1),
 				&:nth-of-type(2) {
 					width: 30%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(3),
 				&:nth-of-type(4) {
 					width: 20%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2433,6 +2462,7 @@
 
 					&:nth-of-type(1) {
 						width: 30%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2445,17 +2475,20 @@
 					&:nth-of-type(9),
 					&:nth-of-type(10) {
 						width: 4%;
-						border: none;
+						min-width: 0px;
+						border-right: none;
 					}
 		
 					&:nth-of-type(11) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(12),
 					&:nth-of-type(13),
 					&:nth-of-type(14) {
 						width: 10%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2469,11 +2502,13 @@
 
 					&:nth-of-type(1) {
 						width: 30%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2) {
 						width: 10%;
-						border: none;
+						min-width: 0px;
+						border-right: none;
 					}
 		
 					&:nth-of-type(3),
@@ -2481,15 +2516,18 @@
 					&:nth-of-type(5),
 					&:nth-of-type(6) {
 						width: 5%;
-						border: none;
+						min-width: 0px;
+						border-right: none;
 					}
 		
 					&:nth-of-type(7) {
 						width: 5%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(8) {
 						width: 35%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2505,10 +2543,12 @@
 				&:nth-of-type(9),
 				&:nth-of-type(10) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 61%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
@@ -2518,6 +2558,7 @@
 				&:nth-of-type(7),
 				&:nth-of-type(8) {
 					width: 4%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2542,10 +2583,12 @@
 				&:nth-of-type(1),
 				&:nth-of-type(3) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 90%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2557,10 +2600,12 @@
 				&:nth-of-type(10),
 				&:nth-of-type(11) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 57%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
@@ -2571,6 +2616,7 @@
 				&:nth-of-type(8),
 				&:nth-of-type(9) {
 					width: 4%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2585,19 +2631,23 @@
 				&:nth-of-type(5),
 				&:nth-of-type(8) {
 					width: 5%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(4) {
 					width: 6%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
 				&:nth-of-type(6) {
 					width: 32%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(7) {
 					width: 10%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2612,10 +2662,12 @@
 				&:nth-of-type(8),
 				&:nth-of-type(9) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 65%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
@@ -2624,6 +2676,7 @@
 				&:nth-of-type(6),
 				&:nth-of-type(7) {
 					width: 4%;
+					min-width: 0px;
 				}
 			}
 		}
