--- a/scss_3/_table.scss
+++ b/scss_3/_table.scss
@@ -2105,18 +2105,23 @@
 		th {
 			color: #1b1b1b;
 			font-size: 13px;
-			padding: 4px 0px 3px;
+			padding: 7px 0px 3px;
 			vertical-align: middle;
 			background: #ffe29f;
 			border-style: solid;
 			border-width: 0px 1px 1px 0px;
 			border-color: transparent #fba978 #e8b746 transparent;
 			position: static;
+			pointer-events: none;
+
+			&::before {
+				display: none;
+			}
 	
 			//字靠左
 			&.tLeft {
 				text-align: left;
-				padding: 0px 10px;
+				padding: 3px 0px 0px 10px;
 			}
 		}
   
@@ -2202,11 +2207,13 @@
 				
 				&:nth-of-type(1) {
 					width: 50%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(2),
 				&:nth-of-type(4) {
 					width: 15%;
+					min-width: 0px;
 		
 					.yellowCard {
 						padding-left: 6px;
@@ -2216,6 +2223,7 @@
 				&:nth-of-type(3),
 				&:nth-of-type(5) {
 					width: 10%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2228,6 +2236,7 @@
 
 				&:nth-of-type(1) {
 					width: 44%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(2),
@@ -2240,6 +2249,7 @@
 				&:nth-of-type(9),
 				&:nth-of-type(10) {
 					width: 4%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(11),
@@ -2247,6 +2257,7 @@
 				&:nth-of-type(13),
 				&:nth-of-type(14) {
 					width: 5%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2258,6 +2269,7 @@
 			td {
 				&:nth-of-type(1) {
 					width: 74%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(2),
@@ -2265,11 +2277,13 @@
 				&:nth-of-type(4),
 				&:nth-of-type(5) {
 					width: 4%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(6),
 				&:nth-of-type(7) {
 					width: 5%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2284,16 +2298,19 @@
 				&:nth-of-type(2),
 				&:nth-of-type(6) {
 					width: 5%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(4),
 				&:nth-of-type(5),
 				&:nth-of-type(7) {
 					width: 10%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(3) {
 					width: 55%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2308,6 +2325,7 @@
 
 					&:nth-of-type(1) {
 						width: 32%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2318,6 +2336,7 @@
 					&:nth-of-type(7),
 					&:nth-of-type(8) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(9),
@@ -2329,6 +2348,7 @@
 					&:nth-of-type(15),
 					&:nth-of-type(16) {
 						width: 5%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2342,6 +2362,7 @@
 
 					&:nth-of-type(1) {
 						width: 37%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2352,6 +2373,7 @@
 					&:nth-of-type(7),
 					&:nth-of-type(8) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(9),
@@ -2362,6 +2384,7 @@
 					&:nth-of-type(14),
 					&:nth-of-type(15) {
 						width: 5%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2373,6 +2396,7 @@
 
 					&:nth-of-type(1) {
 						width: 51%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2383,16 +2407,19 @@
 					&:nth-of-type(7),
 					&:nth-of-type(8) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(9),
 					&:nth-of-type(10),
 					&:nth-of-type(11) {
 						width: 5%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(12) {
 						width: 6%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2407,11 +2434,13 @@
 				&:nth-of-type(1),
 				&:nth-of-type(2) {
 					width: 30%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(3),
 				&:nth-of-type(4) {
 					width: 20%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2438,6 +2467,7 @@
 
 					&:nth-of-type(1) {
 						width: 30%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2450,17 +2480,20 @@
 					&:nth-of-type(9),
 					&:nth-of-type(10) {
 						width: 4%;
-						border: none;
+						min-width: 0px;
+						border-right: none;
 					}
 		
 					&:nth-of-type(11) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(12),
 					&:nth-of-type(13),
 					&:nth-of-type(14) {
 						width: 10%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2474,11 +2507,13 @@
 
 					&:nth-of-type(1) {
 						width: 30%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2) {
 						width: 10%;
-						border: none;
+						min-width: 0px;
+						border-right: none;
 					}
 		
 					&:nth-of-type(3),
@@ -2486,15 +2521,18 @@
 					&:nth-of-type(5),
 					&:nth-of-type(6) {
 						width: 5%;
-						border: none;
+						min-width: 0px;
+						border-right: none;
 					}
 		
 					&:nth-of-type(7) {
 						width: 5%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(8) {
 						width: 35%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2510,10 +2548,12 @@
 				&:nth-of-type(9),
 				&:nth-of-type(10) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 61%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
@@ -2523,6 +2563,7 @@
 				&:nth-of-type(7),
 				&:nth-of-type(8) {
 					width: 4%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2547,10 +2588,12 @@
 				&:nth-of-type(1),
 				&:nth-of-type(3) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 90%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2562,10 +2605,12 @@
 				&:nth-of-type(10),
 				&:nth-of-type(11) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 57%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
@@ -2576,6 +2621,7 @@
 				&:nth-of-type(8),
 				&:nth-of-type(9) {
 					width: 4%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2590,19 +2636,23 @@
 				&:nth-of-type(5),
 				&:nth-of-type(8) {
 					width: 5%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(4) {
 					width: 6%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
 				&:nth-of-type(6) {
 					width: 32%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(7) {
 					width: 10%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2617,10 +2667,12 @@
 				&:nth-of-type(8),
 				&:nth-of-type(9) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 65%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
@@ -2629,6 +2681,7 @@
 				&:nth-of-type(6),
 				&:nth-of-type(7) {
 					width: 4%;
+					min-width: 0px;
 				}
 			}
 		}
