--- a/scss_5/_table.scss
+++ b/scss_5/_table.scss
@@ -348,7 +348,7 @@
 		tr {
 
 			td {
-				padding: 10px 3px;
+				padding: 8px 3px;
 
 				&.tLeft {
 					text-align: left;
@@ -2164,13 +2164,14 @@
 		th {
 			color: #1b1b1b;
 			font-size: 13px;
-			padding: 4px 0px 3px;
+			padding: 7px 0px 3px;
 			vertical-align: middle;
 			background: #ffe29f;
 			border-style: solid;
 			border-width: 0px 1px 1px 0px;
 			border-color: transparent #fba978 #e8b746 transparent;
 			position: static;
+			pointer-events: none;
 
 			&::before {
 				display: none;
@@ -2179,7 +2180,7 @@
 			//字靠左
 			&.tLeft {
 				text-align: left;
-				padding: 0px 10px;
+				padding: 3px 0px 0px 10px;
 			}
 		}
   
@@ -2265,11 +2266,13 @@
 				
 				&:nth-of-type(1) {
 					width: 50%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(2),
 				&:nth-of-type(4) {
 					width: 15%;
+					min-width: 0px;
 		
 					.yellowCard {
 						padding-left: 6px;
@@ -2279,6 +2282,7 @@
 				&:nth-of-type(3),
 				&:nth-of-type(5) {
 					width: 10%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2291,6 +2295,7 @@
 
 				&:nth-of-type(1) {
 					width: 44%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(2),
@@ -2303,6 +2308,7 @@
 				&:nth-of-type(9),
 				&:nth-of-type(10) {
 					width: 4%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(11),
@@ -2310,6 +2316,7 @@
 				&:nth-of-type(13),
 				&:nth-of-type(14) {
 					width: 5%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2321,6 +2328,7 @@
 			td {
 				&:nth-of-type(1) {
 					width: 74%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(2),
@@ -2328,11 +2336,13 @@
 				&:nth-of-type(4),
 				&:nth-of-type(5) {
 					width: 4%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(6),
 				&:nth-of-type(7) {
 					width: 5%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2347,16 +2357,19 @@
 				&:nth-of-type(2),
 				&:nth-of-type(6) {
 					width: 5%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(4),
 				&:nth-of-type(5),
 				&:nth-of-type(7) {
 					width: 10%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(3) {
 					width: 55%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2371,6 +2384,7 @@
 
 					&:nth-of-type(1) {
 						width: 32%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2381,6 +2395,7 @@
 					&:nth-of-type(7),
 					&:nth-of-type(8) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(9),
@@ -2392,6 +2407,7 @@
 					&:nth-of-type(15),
 					&:nth-of-type(16) {
 						width: 5%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2405,6 +2421,7 @@
 
 					&:nth-of-type(1) {
 						width: 37%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2415,6 +2432,7 @@
 					&:nth-of-type(7),
 					&:nth-of-type(8) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(9),
@@ -2425,6 +2443,7 @@
 					&:nth-of-type(14),
 					&:nth-of-type(15) {
 						width: 5%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2436,6 +2455,7 @@
 
 					&:nth-of-type(1) {
 						width: 51%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2446,16 +2466,19 @@
 					&:nth-of-type(7),
 					&:nth-of-type(8) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(9),
 					&:nth-of-type(10),
 					&:nth-of-type(11) {
 						width: 5%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(12) {
 						width: 6%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2470,11 +2493,13 @@
 				&:nth-of-type(1),
 				&:nth-of-type(2) {
 					width: 30%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(3),
 				&:nth-of-type(4) {
 					width: 20%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2501,6 +2526,7 @@
 
 					&:nth-of-type(1) {
 						width: 30%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2),
@@ -2513,17 +2539,20 @@
 					&:nth-of-type(9),
 					&:nth-of-type(10) {
 						width: 4%;
-						border: none;
+						min-width: 0px;
+						border-right: none;
 					}
 		
 					&:nth-of-type(11) {
 						width: 4%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(12),
 					&:nth-of-type(13),
 					&:nth-of-type(14) {
 						width: 10%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2537,11 +2566,13 @@
 
 					&:nth-of-type(1) {
 						width: 30%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(2) {
 						width: 10%;
-						border: none;
+						min-width: 0px;
+						border-right: none;
 					}
 		
 					&:nth-of-type(3),
@@ -2549,15 +2580,18 @@
 					&:nth-of-type(5),
 					&:nth-of-type(6) {
 						width: 5%;
-						border: none;
+						min-width: 0px;
+						border-right: none;
 					}
 		
 					&:nth-of-type(7) {
 						width: 5%;
+						min-width: 0px;
 					}
 		
 					&:nth-of-type(8) {
 						width: 35%;
+						min-width: 0px;
 					}
 				}
 			}
@@ -2573,10 +2607,12 @@
 				&:nth-of-type(9),
 				&:nth-of-type(10) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 61%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
@@ -2586,6 +2622,7 @@
 				&:nth-of-type(7),
 				&:nth-of-type(8) {
 					width: 4%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2610,10 +2647,12 @@
 				&:nth-of-type(1),
 				&:nth-of-type(3) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 90%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2625,10 +2664,12 @@
 				&:nth-of-type(10),
 				&:nth-of-type(11) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 57%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
@@ -2639,6 +2680,7 @@
 				&:nth-of-type(8),
 				&:nth-of-type(9) {
 					width: 4%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2653,19 +2695,23 @@
 				&:nth-of-type(5),
 				&:nth-of-type(8) {
 					width: 5%;
+					min-width: 0px;
 				}
 	
 				&:nth-of-type(4) {
 					width: 6%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
 				&:nth-of-type(6) {
 					width: 32%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(7) {
 					width: 10%;
+					min-width: 0px;
 				}
 			}
 		}
@@ -2680,10 +2726,12 @@
 				&:nth-of-type(8),
 				&:nth-of-type(9) {
 					width: 5%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(2) {
 					width: 65%;
+					min-width: 0px;
 				}
 		
 				&:nth-of-type(3),
@@ -2692,6 +2740,7 @@
 				&:nth-of-type(6),
 				&:nth-of-type(7) {
 					width: 4%;
+					min-width: 0px;
 				}
 			}
 		}
