--- a/css/style.css
+++ b/css/style.css
@@ -1100,7 +1100,7 @@ main .bg {
   background: #303030;
 }
 .playBoard:last-child {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .playBoard tr {
   text-align: center;
@@ -1131,7 +1131,7 @@ main .bg {
   background: #1b1b1b;
   position: -webkit-sticky;
   position: sticky;
-  top: 70px;
+  top: -1px;
   z-index: 2;
 }
 .playBoard tr th.tLeft {
@@ -4877,6 +4877,7 @@ main .bg {
   position: relative;
   text-align: center;
   scrollbar-width: thin;
+  top: 70px;
 }
 .middle::-webkit-scrollbar {
   width: 5px;
@@ -4892,7 +4893,6 @@ main .bg {
 }
 .middle .mainBox {
   display: none;
-  margin-top: 70px;
 }
 .middle .mainBox.display {
   display: block;
@@ -4914,6 +4914,8 @@ main .bg {
   float: left;
   width: 100%;
   height: auto;
+  position: absolute;
+  top: -70px;
 }
 .middle .inner.display {
   display: block;
