--- a/css/style.css
+++ b/css/style.css
@@ -1108,6 +1108,9 @@ main .bg {
   border-width: 1px;
   border-color: transparent transparent #868282 transparent;
 }
+.playBoard tr.onTime {
+  background: #ffffff;
+}
 .playBoard tr:nth-of-type(1) {
   border-top-color: #33bc19;
   border-bottom: none;
